
bin_PROGRAMS = bgpdump2

bgpdump2_SOURCES = \
  bgpdump_file.c bgpdump_peer.c bgpdump_data.c bgpdump_route.c \
  benchmark.c ptree.c queue.c \
  bgpdump_savefile.c bgpdump_query.c bgpdump_ptree.c \
  bgpdump_peerstat.c bgpdump_option.c bgpdump_parse.c \
  bgpdump_udiff.c \
  bgpdump.c

noinst_HEADERS = \
  bgpdump_file.h bgpdump_peer.h bgpdump_data.h bgpdump_route.h \
  benchmark.h ptree.h queue.h \
  bgpdump_savefile.h bgpdump_query.h bgpdump_ptree.h \
  bgpdump_peerstat.h bgpdump_option.h bgpdump_parse.h \
  bgpdump_udiff.h \
  bgpdump.h

